[package]
name = "const-lru"
version = "0.1.0"
edition = "2021"
authors = ["billythedummy"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/billythedummy/const-lru"
repository = "https://github.com/billythedummy/const-lru.git"
keywords = ["lru", "cache", "const-generics", "data-structure", "no_std"]
categories = ["caching", "data-structures", "no-std"]

[dependencies]
num-traits = { version = ">=0.2", default-features = false }

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
